--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-flow-renderer": "^10.3.17",
+    "react-paginate": "^8.2.0",
     "react-router": "^6.26.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
