--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-flow-renderer": "^10.3.17",
     "react-paginate": "^8.2.0",
